# lazyllama

./: Cargo.toml  README  README.md  TESTING.md
.github/workflows/: lazyllama-ci-dev.yml
benches/: performance.rs
docs/: CNAME  README.md  _config.yml  index.html  robots.txt  sitemap.xml
docs/css/: styles.css
docs/images/: README.md
docs/js/: theme.js
src/: app.rs  lib.rs  main.rs  ui.rs  utils.rs
tests/: integration_tests.rs  test_unit.rs
tests/unit/: mod.rs  test_app.rs  test_main.rs  test_ui.rs  test_utils.rs
